# serde_cbor_core

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: readme.rs
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: de.rs  enum.rs  ser.rs  std_types.rs
