[package]
name = "serde_cbor_core"
version = "0.1.0"
authors = ["Gordon Brander"]
repository = "https://github.com/gordonbrander/serde_cbor_core"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR Core/RFC 8949 deterministic encoding implementation for Serde"
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2024"

[dependencies]
cbor4ii = { version = "0.2.14", default-features = false, features = [
    "use_alloc",
    "serde1",
] }
scopeguard = { version = "1.1.0", default-features = false }
serde = { version = "1.0.164", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_derive = { version = "1.0.164", default-features = false }
serde_bytes = { version = "0.11.9", default-features = false, features = [
    "alloc",
] }
serde-transcode = "1.1.1"
const-hex = "1.14.0"
serde_tuple = "1.1.0"
# We need the RC feature to test a trait edge-case.
serde = { version = "1.0.164", default-features = false, features = ["rc"] }

[features]
default = ["std"]
std = ["cbor4ii/use_std", "serde/std", "serde_bytes/std"]
